# lingbot-world

./: .gitignore  DEPLOYMENT.md  README.md  modal_app.py  pyproject.toml  requirements.txt
backend/: __init__.py  config.py  main.py
backend/api/: __init__.py  routes.py  websocket.py
backend/model/: __init__.py  control_adapter.py  world_generator.py
backend/session/: __init__.py  manager.py
examples/: README.md
frontend/: index.html  package-lock.json  package.json  vercel.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: LoadingScreen.jsx  PromptScreen.jsx  WorldView.jsx
frontend/src/styles/: main.css
runpod/: Dockerfile  server.py  start.sh
scripts/: download_weights.py  setup.sh  start_dev.sh
